  awaitable behavior for `thenReturn`, `thenRaise`, and `thenAnswer` (including
  sync and async answer callables), with parity across `when`, `when2`,
  `patch`, and `expect`.
  Note that async introspection metadata (e.g. `inspect.iscoroutinefunction`)
  for stub wrappers is currently implemented only on Python 3.12+.

- Added first-class property/descriptor stubbing support, including class-level property
  stubbing via `when(F).p.thenReturn(...)` and `thenCallOriginalImplementation()` support for
  property stubs (including chained answers like
  `thenReturn(...).thenCallOriginalImplementation()`). Stubbing instance properties now fails
  fast with clear guidance to use class-level stubbing (`when(F).p...`).
- Allow `...` in fixed argument positions as an ad-hoc `any` matcher.
  Trailing positional `...` keeps its existing "rest" semantics.


Release 1.5.5 (November 17, 2025)
---------------------------------

- Improved behavior of the ad-hoc methods of mocks.  (#92)
- Make the shortcut `when(mock).foo().thenReturn()` officially work and just assume
  the user forgot the `None` as return value.



Release 1.5.4 (January 22, 2025)
--------------------------------

- Implement defined behavior for `deepcopy` for mocks.  (#91)



Release 1.5.3 (November 9, 2024)
--------------------------------

- Maintenance release adding support for Python 3.13.



Release 1.5.2 (November 6, 2024)
--------------------------------

- Fixed issue (#86) where you couldn't setup expectations for objects or mocks with an overridden `__eq__` method.



Release 1.5.1 (September 4, 2024)
---------------------------------

- Fixed issue (#82) with methods which have arguments named `value` or `exception`.



Release 1.5.0 (March 4, 2024)
-----------------------------

- @Oracking fixed `expect` to support a string as its first argument.  All
  other functions supported that already.  E.g.

::
    expect('os.path', times=2).exists(...).thenReturn(True)



Release 1.4.0 (August 25, 2022)